example/persistent-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-writer
  labels:
    name: nodejs-writer
spec:
  volume:
    - name: html
      persistentVolumeClaim:
        claimName: nodejs-writer-volume-claim
  containers:
  - name: nodejs-writer
    image: khannedy/nodejs-writer
    volumeMounts:
      - mountPath: /app/html
        name: html
