example/service-nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector: 
    name: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30002
