example/service-nginx-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector: 
    name: nginx
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules: 
    - host: nginx.wahyu.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
